# dramatic

./: .editorconfig  .gitignore  LICENSE.txt  Makefile  contributing.md  dramatic.py  justfile  pyproject.toml  readme.md
.github/workflows/: test.yml
screenshots/: context.cast  decorator.cast  main.cast  max.cast  min.cast  module.cast  readme.md  repl.cast  start.cast
tests/: conftest.py  test_fail.py  test_main.py  test_output.py  test_print.py  test_start.py  utils.py
